test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_pointer_in_param_type.plx
#  array of incomplete element type is illegal
pub fn foo(bad_array: *[3]any) i32 {
    return bad_array == nil
}

pub fn main(none) i32 {
    return 0
}
